--- a/app/src/main/res/layout/activity_admin_edit_products.xml
+++ b/app/src/main/res/layout/activity_admin_edit_products.xml
@@ -1,4 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <RelativeLayout
+        android:id="@+id/rll13"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:layout_alignParentTop="true">
+
+        <ImageView
+            android:id="@+id/back_to_maintain_products_img"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginStart="5dp"
+            android:src="@drawable/back"/>
+
+        <TextView
+            android:id="@+id/back_to_maintain_products_txt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Back"
+            android:textColor="@color/white"
+            android:textSize="20dp"
+            android:layout_toRightOf="@id/back_to_maintain_products_img"
+            android:layout_marginStart="8dp"
+            android:textStyle="bold"
+            android:layout_marginTop="10dp"
+            />
+    </RelativeLayout>
+
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -9,7 +45,8 @@
     android:layout_marginEnd="15dp"
     app:cardElevation="15dp"
     tools:context=".adminActivities.AdminEditProductsActivity"
-    android:layout_centerVertical="true">
+    android:layout_below="@+id/rll13"
+>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -103,3 +140,4 @@
     </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
+</RelativeLayout>
