--- a/app/src/main/res/layout/activity_admin_orders_history.xml
+++ b/app/src/main/res/layout/activity_admin_orders_history.xml
@@ -12,6 +12,27 @@
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
         android:layout_alignParentTop="true">
+        <ImageView
+            android:id="@+id/back_to_users_img"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginStart="5dp"
+            android:src="@drawable/back"/>
+
+        <TextView
+            android:id="@+id/back_to_users_txt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Back"
+            android:textColor="@color/white"
+            android:textSize="20dp"
+            android:layout_toRightOf="@id/back_to_users_img"
+            android:layout_marginStart="8dp"
+            android:textStyle="bold"
+            android:layout_marginTop="10dp"
+            />
 
         <TextView
             android:id="@+id/orders_history_txt"
@@ -19,7 +40,8 @@
             android:layout_height="wrap_content"
             android:text="Orders History"
             android:textColor="@color/white"
-            android:textSize="25dp"
+            android:textSize="20dp"
+            android:textStyle="bold"
             android:textAlignment="center"
             android:gravity="center"
             android:layout_marginTop="10dp"
