--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -13,7 +13,7 @@
         android:layout_alignParentTop="true">
 
         <ImageView
-            android:id="@+id/back_to_cart_img"
+            android:id="@+id/back_to_home_from_cart_img"
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_marginTop="10dp"
@@ -22,13 +22,13 @@
             android:src="@drawable/back"/>
 
         <TextView
-            android:id="@+id/back_to_cart_txt"
+            android:id="@+id/back_to_home_from_cart_txt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Back"
             android:textColor="@color/white"
             android:textSize="20dp"
-            android:layout_toRightOf="@id/back_to_cart_img"
+            android:layout_toRightOf="@id/back_to_home_from_cart_img"
             android:layout_marginStart="8dp"
             android:textStyle="bold"
             android:layout_marginTop="10dp"
