--- a/app/src/main/res/layout/activity_categories.xml
+++ b/app/src/main/res/layout/activity_categories.xml
@@ -12,19 +12,40 @@
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
         android:layout_alignParentTop="true">
+        <ImageView
+            android:id="@+id/back_to_home_img"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginStart="5dp"
+            android:src="@drawable/back"/>
 
         <TextView
-            android:id="@+id/categories_txt"
+            android:id="@+id/back_to_home_from_categories_txt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Back"
+            android:textColor="@color/white"
+            android:textSize="20dp"
+            android:layout_toRightOf="@id/back_to_home_img"
+            android:layout_marginStart="8dp"
+            android:textStyle="bold"
+            android:layout_marginTop="10dp"
+            />
+
+        <TextView
+            android:id="@+id/new_orders_txt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Categories "
             android:textColor="@color/white"
-            android:textSize="20sp"
+            android:textSize="20dp"
+            android:textAlignment="center"
             android:textStyle="bold"
-            android:layout_marginStart="20dp"
+            android:gravity="center"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
-            android:layout_alignParentLeft="true"
             />
     </RelativeLayout>
 
