--- a/app/src/main/res/layout/activity_category_products.xml
+++ b/app/src/main/res/layout/activity_category_products.xml
@@ -13,19 +13,43 @@
         android:background="@color/colorPrimary"
         android:layout_alignParentTop="true">
 
+        <ImageView
+            android:id="@+id/back_to_categories_img"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginStart="5dp"
+            android:src="@drawable/back"/>
+
+        <TextView
+            android:id="@+id/back_to_categories_txt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Back"
+            android:textColor="@color/white"
+            android:textSize="20dp"
+            android:layout_toRightOf="@id/back_to_categories_img"
+            android:layout_marginStart="8dp"
+            android:textStyle="bold"
+            android:layout_marginTop="10dp"
+            />
+
         <TextView
             android:id="@+id/category_name_txt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
-            android:textSize="20sp"
+            android:textSize="20dp"
+            android:textAlignment="center"
             android:textStyle="bold"
-            android:layout_marginStart="20dp"
+            android:gravity="center"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
-            android:layout_alignParentLeft="true"
             />
+
     </RelativeLayout>
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_category_products"
