--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -10,44 +10,48 @@
     android:layout_height="match_parent"
     tools:context=".SettingsActivity">
 
-    <com.google.android.material.appbar.AppBarLayout
+    <RelativeLayout
         android:id="@+id/app_bar_settings"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@color/colorPrimary">
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:layout_alignParentTop="true">
 
-        <Toolbar
-            android:id="@+id/toolbar_settings"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-                  <TextView
-                      android:id="@+id/close_settings"
-                      android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:text="Back"
-                      android:textColor="@color/white"
-                      android:textSize="18sp"
-                      android:textStyle="bold"
-                      android:layout_alignParentStart="true"
-                      />
-                <TextView
-                    android:id="@+id/update_account_settings"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Update"
-                    android:textColor="@color/white"
-                    android:textSize="18sp"
-                    android:textStyle="bold"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginRight="10dp"
-                    />
+            <ImageView
+                android:id="@+id/close_settings_img"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginStart="5dp"
+                android:src="@drawable/back"/>
 
-        </RelativeLayout>
-        </Toolbar>
-    </com.google.android.material.appbar.AppBarLayout>
+              <TextView
+                  android:id="@+id/close_settings"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:text="Back"
+                  android:textColor="@color/white"
+                  android:textSize="20dp"
+                  android:layout_marginStart="8dp"
+                  android:textStyle="bold"
+                  android:layout_marginTop="10dp"
+                  android:layout_toRightOf="@id/close_settings_img"
+                  />
+            <TextView
+                android:id="@+id/update_account_settings"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Update"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                />
+
+    </RelativeLayout>
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/settings_profile_image"
