--- a/app/src/main/res/layout/users_layout.xml
+++ b/app/src/main/res/layout/users_layout.xml
@@ -18,7 +18,19 @@
             android:text="Userame"
             android:textColor="@color/white"
             android:textSize="14sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:layout_toRightOf="@id/user_image"/>
+
+        <ImageView
+            android:id="@+id/user_image"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="5dp"
+            android:text="Userame"
+            android:textColor="@color/white"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            android:layout_alignParentStart="true"/>
 
         <TextView
             android:id="@+id/user_address"
@@ -31,6 +43,7 @@
             android:textStyle="bold"
             android:layout_marginTop="5dp"
             android:layout_below="@id/username"
+            android:layout_toRightOf="@id/user_image"
             android:textColor="@color/white"
             />
 
@@ -39,11 +52,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
+            android:layout_marginTop="5dp"
             android:text="Email"
             android:textSize="14sp"
             android:textStyle="bold"
             android:textColor="@color/white"
-            android:layout_below="@id/user_address"/>
+            android:layout_below="@id/user_image"/>
 
         <Button
             android:id="@+id/show_orders_history__btn"
