--- a/app/src/main/res/layout/activity_admin_users.xml
+++ b/app/src/main/res/layout/activity_admin_users.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+    android:fillViewport="true">
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -53,8 +57,30 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/users_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/rll12">
     </androidx.recyclerview.widget.RecyclerView>
 
+    <TextView
+        android:id="@+id/google_users_txt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Logged in with Google users:"
+        android:layout_marginStart="10dp"
+        android:layout_marginBottom="5dp"
+        android:textStyle="bold"
+        android:textSize="24dp"
+        android:fontFamily="casual"
+        android:textColor="@color/black"
+        android:layout_below="@id/users_list"
+        android:visibility="visible"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/google_users_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/google_users_txt">
+    </androidx.recyclerview.widget.RecyclerView>
+
 </RelativeLayout>
+</ScrollView>
