--- a/app/src/main/res/layout/activity_admin_orders_history.xml
+++ b/app/src/main/res/layout/activity_admin_orders_history.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:fillViewport="true">
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -52,8 +56,9 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/admin_orders_history_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/rll11">
     </androidx.recyclerview.widget.RecyclerView>
 
 </RelativeLayout>
+</androidx.core.widget.NestedScrollView>
