--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    android:fillViewport="true"
+    android:background="@drawable/background">
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:layout_height="wrap_content"
     tools:context=".RegisterActivity">
 
     //logo
@@ -30,7 +31,6 @@
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:hint="Full name"
-
         android:textColor="@color/colorPrimary"
         android:textColorHint="@color/colorPrimary"
         android:textSize="17sp"
@@ -109,7 +109,5 @@
         android:text="Create account"
         android:textColor="@color/white"
         />
-
-
 </RelativeLayout>
 </ScrollView>
