--- a/app/src/main/res/layout/activity_search_products.xml
+++ b/app/src/main/res/layout/activity_search_products.xml
@@ -27,7 +27,6 @@
             android:layout_marginTop="20dp"
             android:layout_marginStart="10dp"
             android:layout_centerVertical="true"
-            android:inputType="textCapWords"
             />
 
         <Button
@@ -48,7 +47,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/search_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@id/rll4"/>
 
 </RelativeLayout>
