--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -88,7 +88,7 @@
         android:textSize="16dp"
         />
 
-    <EditText
+    <TextView
         android:id="@+id/settings_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
