--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -53,8 +53,23 @@
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
         android:layout_below="@+id/rll1"
-        android:layout_above="@+id/total_price">
+        android:layout_above="@+id/delivery_price">
     </androidx.recyclerview.widget.RecyclerView>
+
+    <TextView
+        android:id="@+id/delivery_price"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/total_price"
+        android:text="Delivery"
+        android:layout_alignParentRight="true"
+        android:textAlignment="textEnd"
+        android:textSize="20dp"
+        android:textColor="@color/colorPrimary"
+        android:textStyle="bold"
+        android:layout_marginBottom="3dp"
+        android:layout_marginEnd="5dp"/>
+
     <TextView
         android:id="@+id/total_price"
         android:layout_width="match_parent"
